// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeeperRewards harvest (own escrow) succeeds for latest rewards root 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 111324,
}
`;

exports[`KeeperRewards harvest (own escrow) succeeds for previous rewards root 1`] = `
Object {
  "calldataByteLength": 324,
  "gasUsed": 113478,
}
`;

exports[`KeeperRewards harvest (own escrow) succeeds for previous rewards root 2`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 74254,
}
`;

exports[`KeeperRewards harvest (shared escrow) succeeds for latest rewards root 1`] = `
Object {
  "calldataByteLength": 292,
  "gasUsed": 143880,
}
`;

exports[`KeeperRewards harvest (shared escrow) succeeds for previous rewards root 1`] = `
Object {
  "calldataByteLength": 292,
  "gasUsed": 146034,
}
`;

exports[`KeeperRewards harvest (shared escrow) succeeds for previous rewards root 2`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 90399,
}
`;

exports[`KeeperRewards set min rewards oracles succeeds 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 32275,
}
`;

exports[`KeeperRewards update rewards succeeds 1`] = `
Object {
  "calldataByteLength": 772,
  "gasUsed": 140715,
}
`;

exports[`KeeperRewards update rewards succeeds 2`] = `
Object {
  "calldataByteLength": 772,
  "gasUsed": 123639,
}
`;

exports[`KeeperRewards update rewards succeeds with all signatures 1`] = `
Object {
  "calldataByteLength": 1156,
  "gasUsed": 146919,
}
`;
